--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,20 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<title>RUN團購</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-{% extends "layout.html" %}
-{% block title %}
-RUN團購 | Home
-{% endblock %}
-{% block content %}
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <title>Register</title>
+    <!-- <link rel="stylesheet" href="style.css">  -->
+</head> 
+
+
 <body>
-    <h1>Welcome to RUN團購</h1>
-        <ul>
-            <li class="profile-link"><a href="profile.html"><img src="profile.jpg"></a></li>
-            <li class="GroupAndShop-link">
-                <div><a href="grouping.html">Grouping</a>
-                    <a href="shopping.html">Shopping</a></div>
-            </li>
-        </ul>
+    <h1>home</h1>
+    <h3><a href="{{url_for('login')}}">login</a></h3><br>
+    <h3><a href="{{url_for('register')}}">register</a></h3><br>
+    {% if session["email"]%}
+    <h3 class="text-success">Welcome : {{session["email"]}}</h3><br>
+    <a href="{{url_for('logout')}}" class="btn btn-primary btn-block">Logout</a>
+    {% endif %}
 </body>
-{% endblock %}
