--- a/templates/Log_In.html
+++ b/templates/Log_In.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>Log in</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="/templates/Home.html">
+            <a class="navbar-brand" href="{{url_for('index')}}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                     <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
                     <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
@@ -24,19 +24,21 @@
             <div class="col"></div>
                 <div class="col-6">
                     <h1 class="fw-bold text-center">請先登入</h1>
-                    <form class="row-3 g-3" action="{{url_for('checkmember')}}",method="POST">
+                    <form action="/login" method="POST" autocomplete="off">
                         <div class="col-md-12">
                             <label class="form-label">Email:</label>
-                            <input class="form-control"  type="email" name="fname">
+                            <input class="form-control"  type="email" name="email" required>
                         </div>
                         <div class="col-md-12">
                             <label class="form-label">Password:</label>
-                            <input class="form-control"  type="password" name="lname">
+                            <input class="form-control"  type="password" name="password" required>
                         </div>
                         <br> 
                         <div class="text-center">
-                            <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                            <button type="submit" value="login" class="btn btn-primary btn-block">Submit</button>
+                            <a href="{{url_for('register')}}" class="btn btn-primary btn-block">Register</a>
                         </div>
+                        
                         
                     </form>
                 </div>
