--- a/templates/Member_Profile.html
+++ b/templates/Member_Profile.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{{url_for('index')}}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                     <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
                     <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
@@ -21,7 +21,7 @@
     </nav>
     <div class="grid text-center container">
         <h1 class="fw-bold">Member Information</h1>
-        <form action="{{ url_for('addmember') }}",method="GET">
+        <a class="navbar-brand">
             <!-- 這邊我先隨便key資料進去之後可以傳參數進來 -->
             <label>Name:&nbsp </label><a>test123</a><br><br>
             <label>Email:&nbsp </label><a>123@gmail.com</a><br><br>
