0604 修改product list和Shopping cart

--- a/templates/Clothes.html
+++ b/templates/Clothes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title> Food </title>
+    <title> Clothes </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <div class="container">
         <div class="row">
-            <p><h1>Food</h1></p>
+            <p><h1>Clothes</h1></p>
             <div class="col-sm-12">
             {% if 'cart_item' in session %}
                 <table class="table table-hover">
