--- a/templates/Food.html
+++ b/templates/Food.html
@@ -1,3 +1,4 @@
+<!--剩下add和虛擬購物車-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
@@ -17,7 +18,6 @@
         <div class="row">
             <p><h1>Food</h1></p>
             <div class="col-sm-12">
-            {% if 'cart_item' in session %}
                 <table class="table table-hover">
                     <thead>
                         <tr>
@@ -28,41 +28,39 @@
                             <th> </th>
                         </tr>
                     </thead>
-                    <tbody>
                     
-         {% for key, value in session['cart_item'].items() %}
-            {% set amount = session['cart_item'][key]['amount'] %}
-            {% set price = session['cart_item'][key]['price'] %}
-            {% set item_price = session['cart_item'][key]['total_price'] %} 
-                        <tr>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>${{ Name }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>${{ origin }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>${{ price }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>${{ store }} </strong></td>
+                    <tbody>
+                       {% for row in rows %}
+                            <tr>
+                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row[product_name] }} </strong></td>
+                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row[origin] }} </strong></td>
+                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row[price] }} </strong></td>
+                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row[store] }} </strong></td>
                             <td class="col-sm-3 col-md-3" colspan='3'>
-                                <a href="{{ url_for('.add_product_to_cart', product_id=session['cart_item'][key]['product_id']) }}" class="btn btn-success ">
-                                    Add
-                                </a>
+                                <form action="{{ url_for('add_product_to_cart') }}" method="POST">
+                                    <input type="hidden" name="product_id" value="{{ row['product_id'] }}">
+                                            <button type="submit" class="btn btn-success"> Add </button>
+                                </form>
                             </td>          
-                        </tr>
-            {% endfor %}
-                        <tr>
+                            </tr>
+                        {% endfor %} 
+                        
+                            <tr>
                             <td class="col-4">
-                            <button type="button" class="btn btn-secondary">
-                                回到Shopping頁面
-                            </button></td>
+                            <form action="{{ url_for('product') }}">
+                                <button type="submit" class="btn btn-secondary"> 回到主畫面 </button>
+                            </form>
+                            </td>
                             <td class="col-4">
-                            <button type="button" class="btn btn-info">
-                                進入購物車
-                            </button></td>
-                        </tr>
+                                <form action="{{ url_for('shoppingCart') }}">
+                                    <button type="submit" class="btn btn-info"> 進入購物車 </button>
+                                </form>
+                            </td>
+                            </tr>
                     </tbody>
                 </table>
-
-         {% endif: %}
             </div>
         </div>
-    </div> 
-  
+    </div>  
 </body>
 </html>
