--- a/templates/Home.html
+++ b/templates/Home.html
@@ -1,21 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Register</title>
-    <!-- <link rel="stylesheet" href="style.css">  -->
-</head> 
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=, initial-scale=1.0">
+        <!-- Font Awesome -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+        <!-- MDB -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
+        <title>Home</title>
+    </head>
+    <style>
+        h2{
+            text-align: center;
+        }
+        p a{
+            margin-right: 50px;
+            width: 150px;
+        }
+    </style>
 
-
-<body>
-    <h1>home</h1>
-    <h3><a href="{{url_for('login')}}">login</a></h3><br>
-    <h3><a href="{{url_for('register')}}">register</a></h3><br>
-    {% if session["email"]%}
-    <h3 class="text-success">Welcome : {{session["email"]}}</h3><br>
-    <a href="{{url_for('logout')}}" class="btn btn-primary btn-block">Logout</a>
-    {% endif %}
-</body>
+    <body>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="{{url_for('home')}}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                        <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
+                        <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
+                    </svg>
+                </a>
+                <h1 style="margin: auto;"><strong>五星好蘋</strong></h1>
+                <a href="{{url_for('logout')}}" class="btn btn-primary">Logout</a>
+            </div>
+        </nav>
+        <br>
+        {% if session["email"]%}
+        <h2 class="bg-success p-2 text-dark bg-opacity-10 display-6">Welcome : <strong>{{session["email"]}}</strong></h2><br>
+        <p style="text-align: center">
+            <a href="{{url_for('grouping')}}" class="btn btn-info">Grouping</a>
+            <a href="{{url_for('shopping')}}" class="btn btn-info">Shopping</a>
+        </p>
+        {% endif %}
+    </body>
+</html>
