--- a/templates/Register.html
+++ b/templates/Register.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Register</title>
-    <!-- <link rel="stylesheet" href="style.css"> --> 
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=, initial-scale=1.0">
+        <!-- Font Awesome -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+        <!-- MDB -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
+        <title>Register</title>
+    </head>
 <body>
     <nav class="navbar bg-body-tertiary">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="{{url_for('index')}}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                     <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
                     <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
                 </svg>
             </a>
+            <h1 style="margin: auto;"><strong>五星好蘋</strong></h1> <h1></h1>
         </div>
     </nav>
         <div class="container">
@@ -24,7 +29,7 @@
                 <div class="col">
                 </div>
                 <div class="col-6">
-                    <h1 class="fw-bold text-center">請先註冊</h1>
+                    <br><h1 class="fw-bold text-center">請先註冊</h1>
                     <form action="{{url_for('register')}}" method="POST" autocomplete="off">
                         <div class="col-md-12">
                             <label class="form-label">Email</label>
@@ -48,7 +53,7 @@
                         </div>
                         <br>
                         <div class="col-md-12 text-center">
-                            <button type="submit" value="register" class="btn btn-primary btn-block">Submit</button>
+                            <button type="submit" value="register" class="btn btn-primary">Submit</button>
                         </div>
                     </form>
                 </div>
