--- a/templates/Applicances.html
+++ b/templates/Applicances.html
@@ -1,4 +1,3 @@
-<!--剩下add和虛擬購物車-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -30,14 +29,15 @@
                     </thead>
                     
                     <tbody>
-                       {% for row in rows %}
+                    {% for row in rows %}
                             <tr>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row[product_name] }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row[origin] }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row[price] }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row[store] }} </strong></td>
+                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row["product_name"] }} </strong></td>
+                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row["origin"] }} </strong></td>
+                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row["price"] }} </strong></td>
+                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row["store"] }} </strong></td>
                             <td class="col-sm-3 col-md-3" colspan='3'>
-                                <form action="{{ url_for('add_product_to_cart') }}" method="POST">
+                            <td>
+                                <form action="/add" method="POST">
                                     <input type="hidden" name="product_id" value="{{ row['product_id'] }}">
                                             <button type="submit" class="btn btn-success"> Add </button>
                                 </form>
