全部沒大改，可互通

--- a/templates/Shopping.html
+++ b/templates/Shopping.html
@@ -40,8 +40,8 @@
                 <td><a href="{{url_for('food')}}" class="btn btn-info">Food</a></td>
                 </tr>
                 <tr>
-                <td>costmetic</td>
-                <td><a href="{{url_for('costmetic')}}" class="btn btn-info">Costmetic</a></td>
+                <td>Applicances</td>
+                <td><a href="{{url_for('applicances')}}" class="btn btn-info">Applicances</a></td>
                 </tr>
                 <tr>
                 <td>clothes</td>
