所有頁面連完成

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -25,7 +25,7 @@
     <body>
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{url_for('home')}}">
+                <a class="navbar-brand" href="{{url_for('index')}}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                         <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
                         <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
@@ -40,7 +40,7 @@
         <h2 class="bg-success p-2 text-dark bg-opacity-10 display-6">Welcome : <strong>{{session["email"]}}</strong></h2><br>
         <p style="text-align: center">
             <a href="{{url_for('grouping')}}" class="btn btn-info">Grouping</a>
-            <a href="{{url_for('shopping')}}" class="btn btn-info">Shopping</a>
+            <a href="{{url_for('product')}}" class="btn btn-info">Shopping</a>
         </p>
         {% endif %}
     </body>
