--- a/templates/Clothes.html
+++ b/templates/Clothes.html
@@ -1,66 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title> Clothes </title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <link rel="stylesheet" href="styles.css">
-
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
 </head>
 
 <body>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
-    <div class="container">
-        <div class="row">
-            <p><h1>Clothes</h1></p>
-            <div class="col-sm-12">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>origin</th>
-                            <th>price</th>
-                            <th>store</th>
-                            <th> </th>
-                        </tr>
-                    </thead>
-                    
-                    <tbody>
-                    {% for row in rows %}
-                            <tr>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row["product_name"] }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row["origin"] }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row["price"] }} </strong></td>
-                            <td class="col-sm-3 col-md-3 text-center"><strong>{{ row["store"] }} </strong></td>
-                            <td class="col-sm-3 col-md-3" colspan='3'>
-                            <td>
-                                <form action="/add" method="POST">
-                                    <input type="hidden" name="product_id" value="{{ row['product_id'] }}">
-                                            <button type="submit" class="btn btn-success"> Add </button>
-                                </form>
-                            </td>          
-                            </tr>
-                        {% endfor %} 
-                        
-                            <tr>
-                            <td class="col-4">
-                            <form action="{{ url_for('product') }}">
-                                <button type="submit" class="btn btn-secondary"> 回到主畫面 </button>
-                            </form>
-                            </td>
-                            <td class="col-4">
-                                <form action="{{ url_for('shoppingCart') }}">
-                                    <button type="submit" class="btn btn-info"> 進入購物車 </button>
-                                </form>
-                            </td>
-                            </tr>
-                    </tbody>
-                </table>
-            </div>
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{url_for('home')}}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+                    <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
+                    <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
+                </svg>
+            </a>
+            <h1 style="margin: auto;"><strong>五星好蘋</strong></h1>
+            <a href="{{url_for('logout')}}" class="btn btn-primary">Logout</a>
         </div>
-    </div>  
+    </nav>
+
+    <br><br><h1 style="margin-right: 500px; text-align: center;"
+            class="display-3">Clothes</h1><br>
+
+    <table class="table table-bordered text-center" style="width: auto; margin: auto;">
+        <thead class="bg-light">
+            <tr>
+                <th>Name</th>
+                <th>Origin</th>
+                <th>Price</th>
+                <th>Store</th>
+                <th>#</th>
+            </tr>
+        </thead>
+        
+        <tbody>
+            {% for row in rows %}
+            <tr>
+                <td class="col-3"><strong>{{ row["product_name"] }} </strong></td>
+                <td class="col-3"><strong>{{ row["origin"] }} </strong></td>
+                <td class="col-2"><strong>{{ row["price"] }} </strong></td>
+                <td class="col-2"><strong>{{ row["store"] }} </strong></td>
+                <td class="col-2">
+                    <form action="/add" method="POST">
+                        <input type="hidden" name="product_id" value="{{ row['product_id'] }}">
+                            <button type="submit" class="btn btn-success"> Add </button>
+                    </form>
+                </td>          
+            </tr>
+            {% endfor %} 
+        </tbody>
+    </table>
+
+    <br><p style="text-align: center">
+        <a href="{{url_for('product')}}" class="btn btn-secondary" style="margin-right: 50px">回到主畫面</a>
+        <a href="{{url_for('shoppingCart')}}" class="btn btn-info">進入購物車</a>
+    </p>
+
 </body>
 </html>
