--- a/templates/Shopping.html
+++ b/templates/Shopping.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <title> Shopping </title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=, initial-scale=1.0">
@@ -9,7 +10,6 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
         <!-- MDB -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
-        <title>Shopping</title>
     </head>
     <body>
         <nav class="navbar bg-body-tertiary">
@@ -27,16 +27,16 @@
         <span style="text-align: center;">
         <br><div class="shadow-inner" style="width:30%;margin: auto;"><h1 class="display-1">Shopping</h1></div><br>
         <h3><strong>選擇你需要的商品種類：</strong></h3>
-        <table class="table table-striped table-bordered" style="width: 400px; margin: auto;">
+        <table class="table table-striped table-bordered text-center" style="width: 400px; margin: auto;">
             <thead>
                 <tr>
-                <th scope="col">種類名稱</th>
-                <th scope="col">網址</th>
+                    <th scope="col">種類名稱</th>
+                    <th scope="col">網址</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                <td>food</td>
+                <td>Food</td>
                 <td><a href="{{url_for('food')}}" class="btn btn-info">Food</a></td>
                 </tr>
                 <tr>
@@ -44,12 +44,12 @@
                 <td><a href="{{url_for('applicances')}}" class="btn btn-info">Applicances</a></td>
                 </tr>
                 <tr>
-                <td>clothes</td>
+                <td>Clothes</td>
                 <td><a href="{{url_for('clothes')}}" class="btn btn-info">Clothes</a></td>
                 </tr>
                 <tr>
                 <td>Other</td>
-                <td><a href="{{url_for('others')}}" class="btn btn-info">Other</a></td>
+                <td><a href="{{url_for('others')}}" class="btn btn-info ">Other</a></td>
                 </tr>
             </tbody>
             </table>
