--- a/templates/Shopping.html
+++ b/templates/Shopping.html
@@ -20,7 +20,7 @@
                         <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
                     </svg>
                 </a>
-                <h1><strong>五星好蘋</strong></h1>
+                <h1 style="margin: auto;"><strong>五星好蘋</strong></h1>
                 <a href="{{url_for('logout')}}" class="btn btn-primary">Logout</a>
             </div>
         </nav>
