補充Profile功能及美化

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -16,15 +16,12 @@
         h2{
             text-align: center;
         }
-        p a{
-            width: 150px;
-        }
     </style>
 
     <body>
         <nav class="navbar bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="{{url_for('index')}}">
+                <a class="navbar-brand" href="{{url_for('home')}}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                         <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
                         <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
@@ -36,11 +33,21 @@
         </nav>
         <br>
         {% if session["email"]%}
-        <h2 class="bg-success p-2 text-dark bg-opacity-10 display-6">Welcome : <strong>{{session["email"]}}</strong></h2><br>
-        <p style="text-align: center">
-            <a href="{{url_for('grouping')}}" class="btn btn-info" style="margin-right: 50px;">Grouping</a>
-            <a href="{{url_for('product')}}" class="btn btn-info">Shopping</a>
-        </p>
+        <h2 class="bg-success p-2 text-dark bg-opacity-10 display-5">Welcome : <strong>{{session["email"]}}</strong></h2><br>
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-4" style="text-align: center;">
+                <i class="fas fa-user fa-10x"></i><br><br>
+                <a href="{{url_for('member_profile')}}" class="btn btn-dark">Edit Profile</a>
+            </div>
+            <div class="col-4">
+                <p style="text-align: center"><br><br>
+                    <a href="{{url_for('grouping')}}" class="btn btn-info col-5 btn-lg">Grouping</a><br><br><br>
+                    <a href="{{url_for('product')}}" class="btn btn-info col-5 btn-lg">Shopping</a>
+                </p>
+            </div>
+            <div class="col-2"></div>
+        </div>
         {% endif %}
     </body>
 </html>
