--- a/templates/Grouping.html
+++ b/templates/Grouping.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
         <span style="text-align: center;">
-            <br><div class="shadow-inner" style="width:30%;margin: auto;"><h1 class="display-1">Grouping</h1></div><br>
+            <br><h2 class="bg-dark p-2 text-dark bg-opacity-10 display-1">Grouping</h2></div><br>
             <form action="{{ url_for('grouping') }}" method="POST">
                 <h3><strong>請輸入您的商品資料：</strong></h3><br>
                 <p>商品名稱：<input type="text" name="name" /></p>
