--- a/templates/Member_Profile.html
+++ b/templates/Member_Profile.html
@@ -1,37 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Member Profile</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>Member</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.4.0/mdb.min.css" rel="stylesheet"/>
 </head>
 <body>
     <nav class="navbar bg-body-tertiary">
-        <div class="container">
-            <a class="navbar-brand" href="{{url_for('index')}}">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{url_for('home')}}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
                     <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
                     <path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
                 </svg>
             </a>
+            <h1 style="margin: auto;"><strong>五星好蘋</strong></h1>
+            <a href="{{url_for('logout')}}" class="btn btn-primary">Logout</a>
         </div>
     </nav>
-    <div class="grid text-center container">
-        <h1 class="fw-bold">Member Information</h1>
-        <a class="navbar-brand">
-            <!-- 這邊我先隨便key資料進去之後可以傳參數進來 -->
-            <label>Name:&nbsp </label><a>test123</a><br><br>
-            <label>Email:&nbsp </label><a>123@gmail.com</a><br><br>
-            <label>Password:&nbsp </label><a>******</a><br><br>
-            <label>Birth Date:&nbsp </label><a>1989/3/23</a><br><br>
-            <label>Cellphone:&nbsp </label><a>0912345678</a><br><br>
-            <label>Address(Country):&nbsp </label><a>我是示範地址</a><br><br>
-            <input type="submit" value="Edit">
-        </form>
-    </div>
-        
+    {% if session["email"]%}
+    <br>
+        <h2 class="bg-warning p-2 text-dark bg-opacity-10 display-4 text-center">Member Information</h2><br>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-2">Email : </div>
+            <div class="col text-center">{{ session["email"] }}</div>
+            <div class="col-5"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-2">Password : </div>
+            <div class="col text-center">{{ row["password"] }}</div>
+            <div class="col-5"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-2">Birth Date : </div>
+            <div class="col text-center">{{ row["Bdate"] }}</div>
+            <div class="col-5"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-2">Cellphone : </div>
+            <div class="col text-center">{{ row["phone"] }}</div>
+            <div class="col-5"></div>
+        </div>
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-2">Address(Country) : </div>
+            <div class="col text-center">{{ row["address"] }}</div>
+            <div class="col-5"></div>
+        </div>
+        <p style="text-align: center;"><br>
+        <button type="button" class="btn btn-dark col-2" value="{{url_for('edit')}}">edit</button>
+        </p>
+    {% endif %}
 </body>
 </html>
