--- a/templates/Shopping.html
+++ b/templates/Shopping.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
         <span style="text-align: center;">
-        <br><div class="shadow-inner" style="width:30%;margin: auto;"><h1 class="display-1">Shopping</h1></div><br>
+        <br><h2 class="bg-danger p-2 text-dark bg-opacity-10 display-1">Shopping</h2></div><br>
         <h3><strong>選擇你需要的商品種類：</strong></h3>
         <table class="table table-striped table-bordered text-center" style="width: 400px; margin: auto;">
             <thead>
