--- a/templates/ShoppingCart.html
+++ b/templates/ShoppingCart.html
@@ -74,7 +74,7 @@
         <div class="col-1"></div>
         <div class="col-2">
             <form action="/buy" method="POST">
-                <button type="submit" class="btn btn-info"> Add </button>
+                <button type="submit" class="btn btn-info"> Buy </button>
             </form>
         </div>
         <div class="col-2">
