把刪除移到Profile

--- a/templates/Member_Profile.html
+++ b/templates/Member_Profile.html
@@ -68,6 +68,7 @@
             </div><br>
             <p style="text-align: center;"><br>
             <button type="submit" class="btn btn-dark col-2" value="edit">edit</button>
+            <a href="{{url_for('delete_member')}}" class="btn btn-danger">Delete Profile</a>
             </p>
         </form>
     {% endif %}
