--- a/templates/Grouping.html
+++ b/templates/Grouping.html
@@ -36,7 +36,7 @@
 
                 <p>商品價格：<input type="text" name="price" /></p>
 
-                <p>商品數量：<input type="number" name="amount" /></p>
+                <p>商品數量：<input type="number" min="0" name="amount" /></p>
 
                 <p>您的信箱：<input type="text" name="email" /></p>
 
