修正buy的清除sesssion

--- a/templates/Food.html
+++ b/templates/Food.html
@@ -60,7 +60,7 @@
     </table> 
 
     <br><p style="text-align: center">
-        <a href="{{url_for('product')}}" class="btn btn-secondary" style="margin-right: 50px">回到主畫面</a>
+        <a href="{{url_for('product')}}" class="btn btn-secondary" style="margin-right: 50px">回到Shopping頁面</a>
         <a href="{{url_for('shoppingCart')}}" class="btn btn-info">進入購物車</a>
     </p>
         
