--- a/templates/ShoppingCart.html
+++ b/templates/ShoppingCart.html
@@ -89,7 +89,7 @@
                 <button type="submit" class="btn btn-info"> Buy </button>
             </div>
             <div class="col-2">
-                <a href="{{url_for('product')}}" class="btn btn-secondary">回到主畫面</a>
+                <a href="{{url_for('product')}}" class="btn btn-secondary">回到Shopping頁面</a>
             </div>
             <div class="col-4"></div>    
         </div>
